--- a/app/views/shared/staff/_footer.html.erb
+++ b/app/views/shared/staff/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="Footer">
+<footer class="Footer Staff__footer">
   <div class="l-row l-column">
     <div class="Footer__head">
       <%= link_to('BAUKIS KAI', staff_root_url, class:'logo') %>
@@ -8,8 +8,6 @@
     </div>
     <div class="Footer__body">
       <p>Powered by BAUKIS KAI &copy; 2014 k2works</p>
-      <p><a href="#">Legal Notice</a></p>
-      <p><a href="#">Privacy policy</a></p>
     </div>
   </div>
 </footer>
