--- a/app/views/shared/staff/_header.html.erb
+++ b/app/views/shared/staff/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="Header l-column">
+<header class="Header Staff__header">
   <div id="menu-button" class="Header__button">
     <%= fa_icon 'bars' %>
   </div>
