--- a/app/views/staff/top/index.html.erb
+++ b/app/views/staff/top/index.html.erb
@@ -1,2 +1,16 @@
 <% @title = '職員トップページ' %>
-<h1><%= @title %></h1>
+<section class="Section">
+  <h1 class="Staff__title"><%= @title %></h1>
+</section>
+
+<section class="Section l-column">
+  <div class="Section__head">
+    <h2 class="sectionLabel">お知らせ</h2>
+  </div>
+  <ol class="NewsList">
+    <li class="NewsList__item">
+      <time class="NewsList__head" datatime="2017-1-17">2016.10.12</time>
+      <span class="NewsList__body">開発を開始しました</span>
+    </li>
+  </ol>
+</section>
