--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<div id="wrapper" class="SpMenu__wrapper">
+<div id="wrapper" class="SpMenu__wrapper Admin__wrapper">
   <div id="overlay" class="SpMenu__overlay"></div>
   <%= render 'shared/admin/header' %>
   <%= yield %>
