--- a/app/views/shared/admin/_header.html.erb
+++ b/app/views/shared/admin/_header.html.erb
@@ -1,9 +1,9 @@
-<header class="Header l-column">
+<header class="Header Admin__header">
   <div id="menu-button" class="Header__button">
     <%= fa_icon 'bars' %>
   </div>
   <div class="Header__head">
-    <h1 class="logo"><%= link_to('BAUKIS KAI', staff_root_url, class:'logo') %></h1>
+    <h1 class="logo"><%= link_to('BAUKIS KAI', admin_root_url, class:'logo logo--admin') %></h1>
   </div>
   <nav class="Header__body SpMenu">
     <ul class="Menu">
