--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -42,6 +42,18 @@ $very_light_gray: #fafafa;
 $dark_cyan: #448888;
 $very_dark_cyan: darken($dark_cyan, 25%);
 
+/* マゼンタ系 */
+
+$dark_magenta: #884488;
+$very_dark_magenta: darken($dark_magenta, 25%);
+
+/* 赤系 */
+$red: #cc0000;
+$pink: #ffcccc;
+
+/* 緑系 */
+$green: #00cc00;
+
 /* マージン、パディング */
 
 $narrow: 2px;
