--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -77,6 +77,9 @@
 // Staff
 @import "pages/staff";
 
+// Administrator
+@import "pages/admin";
+
 // ===========================
 // Utils
 // ===========================
