ビジュアルデザイン #2

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -41,6 +41,9 @@
 // SNS
 @import "./components/common/sns";
 
+// エラー
+@import "./components/common/errors";
+
 // Others
 //----------------------------
 // ブログ抜粋
