例外ActionController::RoutingErrorの処理 #2

--- a/app/assets/stylesheets/components/common/_errors.scss
+++ b/app/assets/stylesheets/components/common/_errors.scss
@@ -16,5 +16,5 @@
     background-color: $very_light_gray;
     text-align: center;
   }
-  &__test--url { font-family: monospace; }
+  &__url { font-family: monospace; }
 }
