エラーページ #2

--- a/app/views/staff/top/index.html.erb
+++ b/app/views/staff/top/index.html.erb
@@ -9,7 +9,11 @@
   </div>
   <ol class="NewsList">
     <li class="NewsList__item">
-      <time class="NewsList__head" datatime="2017-1-17">2016.10.12</time>
+      <time class="NewsList__head" datatime="2017-1-18">2017.1.18</time>
+      <span class="NewsList__body">エラーページを追加</span>
+    </li>
+    <li class="NewsList__item">
+      <time class="NewsList__head" datatime="2017-1-17">2017.1.17</time>
       <span class="NewsList__body">開発を開始しました</span>
     </li>
   </ol>
