リンクの追加 #3

--- a/app/assets/stylesheets/pages/_admin.scss
+++ b/app/assets/stylesheets/pages/_admin.scss
@@ -11,6 +11,19 @@ html, body {
   height: 100%;
 }
 
+.Header__head {
+  text-align: left;
+}
+
+.logo--admin {
+  color: $color-white;
+}
+
+.login--admin {
+  float: right;
+  color: $very_light_gray;
+}
+
 .Admin {
   &__wrapper {
     position: relative;
