--- a/app/views/shared/admin/_header.html.erb
+++ b/app/views/shared/admin/_header.html.erb
@@ -10,4 +10,10 @@
       <li class="Menu__item"><a href="#"></a></li>
     </ul>
   </nav>
+  <%= if current_administrator
+        link_to 'ログアウト', :staff_session, method:delete, class: 'login--staff'
+      else
+        link_to 'ログイン', :staff_login, class: 'login--staff'
+      end
+  %>
 </header>
