スタイルシートの作成 #4

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -83,6 +83,9 @@
 // Administrator
 @import "pages/admin";
 
+// Login
+@import "pages/login";
+
 // ===========================
 // Utils
 // ===========================
