メッセージの表示 #4

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -27,6 +27,9 @@
 // フッター
 @import "./components/common/footer";
 
+// メッセージ
+@import "./components/parts/flash";
+
 // Common
 //----------------------------
 // ヘッダー
