管理者ログイン機能追加 #4

--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -9,7 +9,14 @@
   margin: $wide * 2 auto;
   padding: $wide * 2;
   border-radius: $wide;
-  border: solid 4px $dark_cyan;
+
+  &--staff {
+    border: solid 4px $dark_cyan;
+  }
+  &--admin {
+    border: solid 4px $dark_magenta;
+  }
+
   background-color: $very_light_gray;
 
   &__head {
