管理者ログアウト機能追加 #4

--- a/app/views/shared/admin/_header.html.erb
+++ b/app/views/shared/admin/_header.html.erb
@@ -11,7 +11,7 @@
     </ul>
   </nav>
   <%= if current_administrator
-        link_to 'ログアウト', :admin_session, method:delete, class: 'login--admin'
+        link_to 'ログアウト', :admin_session, method: :delete, class: 'login--admin'
       else
         link_to 'ログイン', :admin_login, class: 'login--admin'
       end
