リファクタリング（配置変更）

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -11,9 +11,9 @@
 <body>
 <div id="wrapper" class="SpMenu__wrapper Admin__wrapper">
   <div id="overlay" class="SpMenu__overlay"></div>
-  <%= render 'shared/admin/header' %>
+  <%= render 'admin/shared/header' %>
   <%= yield %>
-  <%= render 'shared/admin/footer' %>
+  <%= render 'admin/shared/footer' %>
 </div>
 <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
