--- a/app/views/admin/shared/_header.html.erb
+++ b/app/views/admin/shared/_header.html.erb
@@ -17,9 +17,9 @@
     </ul>
   </nav>
   <%= if current_administrator
-        link_to 'ログアウト', :admin_session, method: :delete, class: 'login--admin'
+        link_to 'ログアウト', :admin_session, method: :delete, class: 'btn btn-default'
       else
-        link_to 'ログイン', :admin_login, class: 'login--admin'
+        link_to 'ログイン', :admin_login, class: 'btn btn-default'
       end
   %>
 </header>
