indexアクション #6

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -47,6 +47,9 @@
 // エラー
 @import "./components/common/errors";
 
+// テーブル
+@import "./components/common/table";
+
 // Others
 //----------------------------
 // ブログ抜粋
