--- a/app/views/admin/staff_members/_form.html.erb
+++ b/app/views/admin/staff_members/_form.html.erb
@@ -1,14 +1,16 @@
 <div class="AppForm__notes">
-  <span class="mark"></span>印の付いた項目は入力必須です。
+  <span class="AppForm__notes--mark">*</span>印の付いた項目は入力必須です。
 </div>
 <div>
   <%= f.label :email, t('activerecord.attributes.staff_member.email'), class: 'AppForm__label required' %>
   <%= f.text_field :email, hide_label: true, size: 32, required: true %>
 </div>
+<% if f.object.new_record? %>
 <div>
   <%= f.label :password, t('activerecord.attributes.staff_member.hashed_password'), class: 'AppForm__label required' %>
   <%= f.password_field :pasword, hide_label: true, size:32, required: true %>
 </div>
+<% end %>
 <div>
   <%= f.label :family_name, '氏名', class: 'required' %>
   <%= f.text_field :family_name, hide_label: true, required: true %>
