createアクション #6

--- a/app/views/admin/staff_members/_form.html.erb
+++ b/app/views/admin/staff_members/_form.html.erb
@@ -8,7 +8,7 @@
 <% if f.object.new_record? %>
 <div>
   <%= f.label :password, t('activerecord.attributes.staff_member.hashed_password'), class: 'AppForm__label required' %>
-  <%= f.password_field :pasword, hide_label: true, size:32, required: true %>
+  <%= f.password_field :password, hide_label: true, size:32, required: true %>
 </div>
 <% end %>
 <div>
