--- a/app/views/admin/staff_members/new.html.erb
+++ b/app/views/admin/staff_members/new.html.erb
@@ -1,4 +1,4 @@
-<% @title = '職員の新規登録' %>
+<% @title = t('.title') %>
 <section class="Section">
   <h1 class="Admin__title"><%= @title %></h1>
 </section>
@@ -9,8 +9,8 @@
     <%= bootstrap_form_for [ :admin, @staff_member ] do |f| %>
     <%= render 'form', f: f %>
         <div class="AppForm__buttons">
-          <%= f.submit '登録' %>
-          <%= link_to 'キャンセル', :admin_staff_members %>
+          <%= f.submit t('.submit') %>
+          <%= link_to t('.cancel'), :admin_staff_members %>
         </div>
     <% end %>
   </div>
