--- a/app/views/admin/staff_members/new.html.erb
+++ b/app/views/admin/staff_members/new.html.erb
@@ -9,7 +9,7 @@
     <%= bootstrap_form_for [ :admin, @staff_member ] do |f| %>
     <%= render 'form', f: f %>
         <div class="AppForm__buttons">
-          <%= f.submit t('.submit') %>
+          <%= f.submit t('.create') %>
           <%= link_to t('.cancel'), :admin_staff_members %>
         </div>
     <% end %>
