--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -71,6 +71,10 @@
 @import "./components/form";
 @import "./components/appForm";
 
+// テーブル
+@import "./components/adminTable";
+@import "./components/staffTable";
+
 //font-awesome
 @import "font-awesome";
 //BootStrap
