editアクション #7

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -70,6 +70,8 @@
 // フォーム
 @import "./components/form";
 @import "./components/appForm";
+@import "./components/adminAppForm";
+@import "./components/staffAppForm";
 
 // テーブル
 @import "./components/adminTable";
