--- a/app/views/staff/accounts/edit.html.erb
+++ b/app/views/staff/accounts/edit.html.erb
@@ -1,11 +1,11 @@
 <% @title = t('.title') %>
 <section class="Section">
-  <h1 class="Admin__title"><%= @title %></h1>
+  <h1 class="Staff__title"><%= @title %></h1>
 </section>
 
 <section class="Section l-column AppForm">
-  <div class="AppForm__generic-form AdminAppForm__generic-form">
-    <%= bootstrap_form_for [ :admin, @staff_member ] do |f| %>
+  <div class="AppForm__generic-form StaffAppForm__generic-form">
+    <%= bootstrap_form_for @staff_member, url: :staff_account do |f| %>
         <%= render 'form', f: f %>
         <div class="AppForm__buttons">
           <%= f.submit t('.update') %>
