--- a/app/views/staff/top/index.html.erb
+++ b/app/views/staff/top/index.html.erb
@@ -9,6 +9,10 @@
   </div>
   <ol class="NewsList">
     <li class="NewsList__item">
+      <time class="NewsList__head" datatime="2017-1-28">2017.1.28</time>
+      <span class="NewsList__body">アカウント情報編集機能を追加</span>
+    </li>
+    <li class="NewsList__item">
       <time class="NewsList__head" datatime="2017-1-21">2017.1.21</time>
       <span class="NewsList__body">ログイン機能を追加</span>
     </li>
