--- a/app/views/admin/staff_members/new.html.erb
+++ b/app/views/admin/staff_members/new.html.erb
@@ -4,13 +4,12 @@
 </section>
 
 <section class="Section l-column AppForm">
-
-  <div class="AppForm__generic-form">
+  <div class="AppForm__generic-form AdminAppForm__generic-form">
     <%= bootstrap_form_for [ :admin, @staff_member ] do |f| %>
     <%= render 'form', f: f %>
         <div class="AppForm__buttons">
-          <%= f.submit t('.create') %>
-          <%= link_to t('.cancel'), :admin_staff_members %>
+          <%= f.submit t('.create') ,class: 'btn btn-default btn-lg'%>
+          <%= link_to t('.cancel'), :admin_staff_members ,class: 'btn btn-default btn-lg'%>
         </div>
     <% end %>
   </div>
