ログアウト時にアカウントが非表示にならない不具合を修正

--- a/app/views/staff/shared/_header.html.erb
+++ b/app/views/staff/shared/_header.html.erb
@@ -22,5 +22,8 @@
         link_to t('staff.shared.header.login'), :staff_login, class: 'btn btn-default'
       end
     %>
-  <%= link_to t('staff.shared.header.account'), (:staff_account if current_staff_member) , class: 'btn btn-default' %>
+  <%= if current_staff_member
+        link_to t('staff.shared.header.account'), :staff_account , class: 'btn btn-default'
+      end
+  %>
 </header>
