管理者画面ヘッダーカラー変更

--- a/app/assets/stylesheets/pages/_admin.scss
+++ b/app/assets/stylesheets/pages/_admin.scss
@@ -36,7 +36,7 @@ html, body {
 
   &__header {
     padding: $moderate;
-    background-color: $very_dark_magenta;
+    background-color: $dark_magenta;
     color: $very_light_gray;
     span.logo-mark {
       font-weight: bold;
