--- a/app/assets/stylesheets/components/parts/_flash.scss
+++ b/app/assets/stylesheets/components/parts/_flash.scss
@@ -4,7 +4,7 @@
   display: inline-block;
   padding: $narrow $moderate;
   margin: 0 $wide;
-  font-size: $tiny;
+  font-size: $normal;
   color: $very_light_gray;
 
   &__notice {
