ページネーションのカスタマイズ #9

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -30,6 +30,9 @@
 // メッセージ
 @import "./components/parts/flash";
 
+// ページネーション
+@import "./components/parts/pagination";
+
 // Common
 //----------------------------
 // ヘッダー
