--- a/app/views/kaminari/_next_page.html.erb
+++ b/app/views/kaminari/_next_page.html.erb
@@ -7,5 +7,9 @@
     remote:        data-remote
 -%>
 <span class="next">
-  <%= link_to_unless current_page.last?, t('views.pagination.next').html_safe, url, :rel => 'next', :remote => remote %>
+  <%=
+    link_to_unless(current_page.last?, t('views.pagination.next').html_safe, url, :rel => 'next', :remote => remote) do |name|
+      content_tag(:span, name, class: 'disabled')
+    end
+  %>
 </span>
