モデル間の関連付け #9

--- a/app/views/admin/top/index.html.erb
+++ b/app/views/admin/top/index.html.erb
@@ -9,6 +9,10 @@
   </div>
   <ol class="NewsList">
     <li class="NewsList__item">
+      <time class="NewsList__head" datatime="2017-1-31">2017.1.31</time>
+      <span class="NewsList__body">職員イベント管理機能を追加</span>
+    </li>
+    <li class="NewsList__item">
       <time class="NewsList__head" datatime="2017-1-30">2017.1.30</time>
       <span class="NewsList__body">アクセス制御の強化</span>
     </li>
