--- a/app/assets/stylesheets/components/_appForm.scss
+++ b/app/assets/stylesheets/components/_appForm.scss
@@ -37,4 +37,10 @@
       padding: $wide $very_wide;
     }
   }
+  &--field_with_errors {
+    display: inline;
+    padding: 0;
+    label { color: $red }
+    input { background-color: $pink }
+  }
 }
