リンクの設置 #10

--- a/app/assets/stylesheets/components/common/_table.scss
+++ b/app/assets/stylesheets/components/common/_table.scss
@@ -40,6 +40,8 @@
     padding: $narrow;
     &--email { font-family: monospace }
 
+    &--password { font-family: monospace }
+
     &--date {
       font-family: monospace;
     }
