フォームプレゼンターの利用 #11

--- a/app/assets/stylesheets/components/_appForm.scss
+++ b/app/assets/stylesheets/components/_appForm.scss
@@ -43,4 +43,7 @@
     label { color: $red }
     input { background-color: $pink }
   }
+  &__input-block {
+    input { margin-right: $narrow * 2; }
+  }
 }
