--- a/app/views/layouts/staff.html.erb
+++ b/app/views/layouts/staff.html.erb
@@ -5,6 +5,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title><%= document_title %></title>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'staff', 'data-turbolinks-track': 'reload' %>
   <%= csrf_meta_tags %>
 </head>
 
@@ -15,8 +17,6 @@
   <%= yield %>
   <%= render 'staff/shared/footer' %>
 </div>
-<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 <script>
     imageSlide('Slide', 2);
 </script>
