--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -82,9 +82,13 @@
 
 //font-awesome
 @import "font-awesome";
+
 //BootStrap
 @import "bootstrap-sprockets";
 @import "components/bootstrap-custom";
+
+//jQuery
+@import "jquery-ui/datepicker";
 // ===========================
 // Pages
 // ===========================
