--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -86,6 +86,7 @@
 //BootStrap
 @import "bootstrap-sprockets";
 @import "components/bootstrap-custom";
+@import 'bootstrap-datetimepicker';
 
 //jQuery
 @import "jquery-ui/datepicker";
