部分テンプレート郡の作成 #13

--- a/app/views/staff/customers/new.html.erb
+++ b/app/views/staff/customers/new.html.erb
@@ -9,7 +9,7 @@
         <%= render 'form', f: f %>
         <div class="AppForm__buttons">
           <%= f.submit t('.create') ,class: 'btn btn-default btn-lg'%>
-          <%= link_to t('.cancel'), :admin_staff_members ,class: 'btn btn-default btn-lg'%>
+          <%= link_to t('.cancel'), :staff_customers ,class: 'btn btn-default btn-lg'%>
         </div>
     <% end %>
   </div>
