--- a/app/views/staff/customers/edit.html.erb
+++ b/app/views/staff/customers/edit.html.erb
@@ -5,11 +5,11 @@
 
 <section class="Section l-column AppForm">
   <div class="AppForm__generic-form StaffAppForm__generic-form">
-    <%= bootstrap_form_for @customer_form, as: 'form' do |f| %>
+    <%= bootstrap_form_for @customer_form, as: 'form', url: [:staff, @customer_form.customer] do |f| %>
         <%= render 'form', f: f %>
         <div class="AppForm__buttons">
           <%= f.submit t('.update'),class: 'btn btn-default btn-lg' %>
-          <%= link_to t('.cancel'), :admin_staff_members,class: 'btn btn-default btn-lg' %>
+          <%= link_to t('.cancel'), :staff_customers,class: 'btn btn-default btn-lg' %>
         </div>
     <% end %>
   </div>
