--- a/app/views/staff/customers/_customer_fields.html.erb
+++ b/app/views/staff/customers/_customer_fields.html.erb
@@ -2,12 +2,12 @@
 <%= markup do |m|
   p = Staff::CustomerFormPresenter.new(ff,self)
   p.with_options(required: true) do |q|
-    m << q.text_field_block(:email, 'メールアドレス', size: 32)
-    m << q.password_field_block(:password, 'パスワード', size: 32)
-    m << q.full_name_block(:family_name, :given_name, '氏名')
-    m << q.full_name_block(:family_name_kana, :given_name_kana, 'フリガナ')
+    m << q.text_field_block(:email, t('activerecord.attributes.customer.email'), size: 32)
+    m << q.password_field_block(:password, t('activerecord.attributes.customer.hashed_password'), size: 32)
+    m << q.full_name_block(:family_name, :given_name, t('activerecord.attributes.customer.full_name'))
+    m << q.full_name_block(:family_name_kana, :given_name_kana, t('activerecord.attributes.customer.full_name'))
   end
-  m << p.birthday_field_block(:birthday, '生年月日')
+  m << p.birthday_field_block(:birthday, t('activerecord.attributes.customer.birthday'))
   m << p.gender_field_block
   end %>
 <% end %>
